# rcpp

./: .gitignore  .gitmodules  README  README.md  pyproject.toml  requirements.txt
applications/application_tracking_system/: ats.ipynb  ats3.ipynb  main.py  main2.py  plot.py
applications/credit_scoring/: expected_loss.ipynb  expected_loss.py  main.py  plots.ipynb  quantile.py  utils.py
applications/electricity_prediction/: expected_loss.py  utils_xg.py  xtest.npy  xtrain.npy  xval.npy  ytest.npy  ytrain.npy  yval.npy
applications/forecasting/: expected_loss.ipynb
applications/llms/: expected_loss.py
applications/market_making/: expected_loss.py  explore_data.ipynb  subsample_data.py
credit-scoring/: data_prep.py  loss-modification.ipynb  model.py  rcpp-02-19.ipynb  rcpp-02-27.ipynb  rcpp-03-04.ipynb  rcpp-03-17.ipynb  rcpp-04-04.ipynb  rcpp-04-11.ipynb  rcpp-04-18.ipynb  rcpp-04-27.ipynb  rcpp-0425-1.ipynb  rcpp-0425-2.ipynb  rcpp-05-02-quantile.ipynb  rcpp-05-02.ipynb  rcpp-05-06.ipynb  rcpp-credit score-expected risk control.ipynb  rcpp-new.ipynb  rcpp-quantile risk control.ipynb  rcpp.ipynb  rcpp_utils.py  stochastic-credit-simulator.ipynb  test.py
rcpp/: loss_simulator.py  main.py  performativity_simulator.py  risk_measure.py  width_calculator.py
