[project]
name = "rcpp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13" # Adjusted to match the Python dependency range
dependencies = [
    "langchain==0.2.12",
    "langchain-core==0.2.43",
    "langgraph==0.2.3",
    "langchain-ollama==0.1.1",
    "matplotlib==3.10.3",
    "numpy",
    "pandas",
    "scikit_learn",
    "scipy==1.15.3",
    "tqdm==4.67.1",
    "ipykernel>=6.29.5",
    "vllm>=0.8.5.post1",
]
